fix(measurement): keep range reducer compatible with JDK 17